attribution box aux boutiques /
côté admin

--- a/src/app/components/boutique/produit/produit.component.html
+++ b/src/app/components/boutique/produit/produit.component.html
@@ -279,9 +279,9 @@
       <div class="row">
         <!-- Prix -->
         <div class="col-md-6 mb-3">
-          <label class="form-label">Prix (FCFA) <span class="text-danger">*</span></label>
+          <label class="form-label">Prix (EUR) <span class="text-danger">*</span></label>
           <div class="input-group">
-            <span class="input-group-text">FCFA</span>
+            <span class="input-group-text">EUR</span>
             <input
               type="number"
               class="form-control"
